z-index issue

--- a/_scss/general.scss
+++ b/_scss/general.scss
@@ -160,6 +160,10 @@ blockquote {
     font-size: 1em;
 }
 
+.content {
+    position: relative;
+    z-index: 4;
+}
 
 /* 1.3 Fields */
 
